// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/ColorPicker interactive 1`] = `
<div>
  <div>
    <div
      className="canvasColorPalette"
    >
      <div
        className="item-grid-row"
      >
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#fff",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#666",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#000",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#abc",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#def",
                }
              }
            />
          </div>
        </button>
        <button
          className="euiLink euiLink--primary canvasColorPalette__dot"
          onClick={[Function]}
          style={
            Object {
              "fontSize": 0,
            }
          }
          type="button"
        >
          <div
            className="canvasColorDot"
          >
            <div
              className="canvasColorDot__background canvasCheckered"
            />
            <div
              className="canvasColorDot__foreground"
              style={
                Object {
                  "background": "#abcdef",
                }
              }
            />
          </div>
        </button>
      </div>
    </div>
    <div
      className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
    >
      <div
        className="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={Object {}}
          />
        </div>
      </div>
      <div
        className="euiFlexItem"
        style={
          Object {
            "display": "inline-block",
          }
        }
      >
        <div
          className="euiFormControlLayout"
        >
          <div
            className="euiFormControlLayout__childrenWrapper"
          >
            <input
              className="euiFieldText"
              onChange={[Function]}
              placeholder="Color code"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
      <div
        className="euiFlexItem euiFlexItem--flexGrowZero"
      >
        <button
          aria-label="Add Color"
          className="euiButtonIcon euiButtonIcon--primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="euiIcon euiIcon--medium euiButtonIcon__icon"
            focusable="false"
            height="16"
            style={null}
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
              fillRule="evenodd"
            />
          </svg>
        </button>
        <button
          aria-label="Remove Color"
          className="euiButtonIcon euiButtonIcon--primary"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          <svg
            aria-hidden="true"
            className="euiIcon euiIcon--medium euiButtonIcon__icon"
            focusable="false"
            height="16"
            style={null}
            viewBox="0 0 16 16"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
              fillRule="evenodd"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <p
    style={
      Object {
        "marginTop": 20,
      }
    }
  >
    <label>
      <input
        aria-checked={true}
        checked={true}
        onChange={[Function]}
        type="checkbox"
      />
        
      <span>
        Show Buttons?
      </span>
    </label>
  </p>
</div>
`;

exports[`Storyshots components/ColorPicker six colors 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <svg
              className="euiIcon euiIcon--medium selected-color"
              focusable="false"
              height="16"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="Color code"
            type="text"
            value="#fff"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/ColorPicker six colors, value missing 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abc",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#def",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#abcdef",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#a1b2c3",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="Color code"
            type="text"
            value="#a1b2c3"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots components/ColorPicker three colors 1`] = `
<div>
  <div
    className="canvasColorPalette"
  >
    <div
      className="item-grid-row"
    >
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#fff",
              }
            }
          >
            <svg
              className="euiIcon euiIcon--medium selected-color"
              focusable="false"
              height="16"
              style={
                Object {
                  "fill": "#333",
                }
              }
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6.5 12a.502.502 0 0 1-.354-.146l-4-4a.502.502 0 0 1 .708-.708L6.5 10.793l6.646-6.647a.502.502 0 0 1 .708.708l-7 7A.502.502 0 0 1 6.5 12"
                fillRule="evenodd"
              />
            </svg>
          </div>
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#666",
              }
            }
          />
        </div>
      </button>
      <button
        className="euiLink euiLink--primary canvasColorPalette__dot"
        onClick={[Function]}
        style={
          Object {
            "fontSize": 0,
          }
        }
        type="button"
      >
        <div
          className="canvasColorDot"
        >
          <div
            className="canvasColorDot__background canvasCheckered"
          />
          <div
            className="canvasColorDot__foreground"
            style={
              Object {
                "background": "#000",
              }
            }
          />
        </div>
      </button>
    </div>
  </div>
  <div
    className="euiFlexGroup euiFlexGroup--gutterExtraSmall euiFlexGroup--alignItemsCenter euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <div
        className="canvasColorDot"
      >
        <div
          className="canvasColorDot__background canvasCheckered"
        />
        <div
          className="canvasColorDot__foreground"
          style={
            Object {
              "background": "#fff",
            }
          }
        />
      </div>
    </div>
    <div
      className="euiFlexItem"
      style={
        Object {
          "display": "inline-block",
        }
      }
    >
      <div
        className="euiFormControlLayout"
      >
        <div
          className="euiFormControlLayout__childrenWrapper"
        >
          <input
            className="euiFieldText"
            onChange={[Function]}
            placeholder="Color code"
            type="text"
            value="#fff"
          />
        </div>
      </div>
    </div>
    <div
      className="euiFlexItem euiFlexItem--flexGrowZero"
    >
      <button
        aria-label="Add Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={true}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M8 7h3.5a.5.5 0 1 1 0 1H8v3.5a.5.5 0 1 1-1 0V8H3.5a.5.5 0 0 1 0-1H7V3.5a.5.5 0 0 1 1 0V7zm-.5-7C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882z"
            fillRule="evenodd"
          />
        </svg>
      </button>
      <button
        aria-label="Remove Color"
        className="euiButtonIcon euiButtonIcon--primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        <svg
          aria-hidden="true"
          className="euiIcon euiIcon--medium euiButtonIcon__icon"
          focusable="false"
          height="16"
          style={null}
          viewBox="0 0 16 16"
          width="16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M7.5 0C11.636 0 15 3.364 15 7.5S11.636 15 7.5 15 0 11.636 0 7.5 3.364 0 7.5 0zm0 .882a6.618 6.618 0 1 0 0 13.236A6.618 6.618 0 0 0 7.5.882zM3.5 7h8a.5.5 0 1 1 0 1h-8a.5.5 0 0 1 0-1z"
            fillRule="evenodd"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
